--- a/index.html
+++ b/index.html
@@ -1832,7 +1832,7 @@
             const brightnessSlider = document.getElementById('accent-brightness-slider');
             const brightnessDisplay = document.getElementById('brightness-value-display');
 
-            const DEFAULT_ACCENT_RGB = '64, 158, 255'; // Стандартный синий
+            const DEFAULT_ACCENT_RGB = '0, 0, 0'; // Стандартный
             const DEFAULT_BRIGHTNESS = '20';
 
             if (colorPicker) {
