--- a/index.html
+++ b/index.html
@@ -911,18 +911,25 @@
             }
             
             const contentDiv = document.createElement('div');
-            contentDiv.className = 'prose max-w-none mt-2 w-full';
-            let processedContent = String(msg.content || '')
-                .replace( // Обработка стандартного тега мыслей
-                    /<think>([\s\S]*?)<\/think>/g,
-                    `<details><summary>Показать ход мыслей</summary><div>$1</div></details>`
-                )
-                .replace( // Обработка нового тега для лога пайплайна
-                    /<pipeline_trace>([\s\S]*?)<\/pipeline_trace>/g,
-                    `<details><summary>Показать ход выполнения пайплайна</summary><div>$1</div></details>`
-                );
-            const rawHtml = marked.parse(processedContent, { breaks: true, gfm: true });
-            contentDiv.innerHTML = DOMPurify.sanitize(rawHtml, { ADD_TAGS: ['details', 'summary'] });
+            contentDiv.className = 'mt-2 w-full'; // Убрали 'prose' отсюда по умолчанию
+
+            // --- ИЗМЕНЕНИЕ ЗДЕСЬ ---
+            // Проверяем, является ли сообщение логом пайплайна
+            if (contentAsString.includes('pipeline-log-window')) {
+                // Если да, просто вставляем HTML как есть, БЕЗ обработки Markdown и класса prose
+                contentDiv.innerHTML = contentAsString;
+            } else {
+                // Если это обычное сообщение, добавляем класс prose и обрабатываем через Markdown
+                contentDiv.classList.add('prose', 'max-w-none');
+                let processedContent = String(msg.content || '')
+                    .replace(
+                        /<think>([\s\S]*?)<\/think>/g,
+                        `<details><summary>Показать ход мыслей</summary><div>$1</div></details>`
+                    );
+                const rawHtml = marked.parse(processedContent, { breaks: true, gfm: true });
+                contentDiv.innerHTML = DOMPurify.sanitize(rawHtml, { ADD_TAGS: ['details', 'summary'] });
+            }
+            // --- КОНЕЦ ИЗМЕНЕНИЯ ---
 
             const actionsOuterContainer = document.createElement('div');
             actionsOuterContainer.className = 'absolute bottom-1 right-2 flex items-center bg-bg-element p-1 rounded-md opacity-0 group-hover:opacity-100 transition-opacity z-10';
