--- a/index.html
+++ b/index.html
@@ -208,23 +208,10 @@
     <div id="auth-prompt-modal" class="modal-overlay hidden">
         <div class="modal-content !max-w-4xl !p-0 flex flex-col md:flex-row overflow-hidden">
     
-            <!-- Левая колонка с графикой (скрыта на мобильных) -->
+            <!-- Левая колонка с большой иконкой -->
             <div class="hidden md:flex flex-1 bg-bg-main items-center justify-center p-12">
-                <div class="w-full max-w-sm">
-                    <!-- Вы можете заменить этот SVG на любую свою иллюстрацию -->
-                    <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-                        <defs>
-                            <linearGradient id="gradient" x1="0%" y1="0%" x2="100%" y2="100%">
-                                <stop offset="0%" style="stop-color: var(--color-accent); stop-opacity:1" />
-                                <stop offset="100%" style="stop-color: var(--color-accent-hover); stop-opacity:1" />
-                            </linearGradient>
-                        </defs>
-                        <path fill="url(#gradient)" d="M48.1,-63.9C61.8,-53.4,72.2,-37.8,76.5,-20.9C80.8,-4,79,14.1,70.5,28.2C62,42.3,46.8,52.4,31.5,59.3C16.2,66.2,0.8,70,-15.8,68.9C-32.4,67.8,-49.9,61.8,-62,49.9C-74.1,38,-80.7,20.1,-81.4,1.8C-82.1,-16.5,-76.8,-35.1,-65.4,-47.5C-54,-60,-36.4,-66.4,-20.5,-69.3C-4.5,-72.1,-2.3,-71.4,9.1,-74.6C20.5,-77.8,41.1,-84.9,48.1,-63.9Z" transform="translate(100 100)" />
-                        <circle cx="60" cy="60" r="10" fill="rgba(255,255,255,0.8)"/>
-                        <circle cx="150" cy="80" r="7" fill="rgba(255,255,255,0.8)"/>
-                        <circle cx="90" cy="160" r="12" fill="rgba(255,255,255,0.8)"/>
-                    </svg>
-                </div>
+                <!-- Большая иконка вместо абстрактной фигуры -->
+                <i data-lucide="brain-circuit" class="w-48 h-48 text-accent/50"></i>
             </div>
     
             <!-- Правая колонка с контентом -->
