--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
     <div id="auth-prompt-modal" class="modal-overlay hidden">
         <div class="modal-content !max-w-4xl !p-0 flex flex-col md:flex-row overflow-hidden">
     
-            <!-- Левая колонка с большой иконкой -->
+            <!-- Левая колонка с вашим логотипом -->
             <div class="hidden md:flex flex-1 bg-bg-main items-center justify-center p-12">
-                <!-- Большая иконка вместо абстрактной фигуры -->
-                <i data-lucide="brain-circuit" class="w-48 h-48 text-accent/50"></i>
+                <!-- Отображаем ваш логотип -->
+                <img src="/icon/favicon.svg" alt="Логотип MBOX" class="w-40 h-40">
             </div>
     
             <!-- Правая колонка с контентом -->
